Update infographics with Tuesday's proofing

--- a/compiled/ethnic-studies.html
+++ b/compiled/ethnic-studies.html
@@ -15,62 +15,62 @@ var data = [
     {
         "year": 1972,
         "title": "Jack Womack",
-        "description": "Jack Womack submits list of courses that could constitute an undergraduate program in ethnic studies."
+        "description": "Harvard history professor John Womack submits a list of courses that could constitute an undergraduate program in ethnic studies."
     },
     {
         "year": 1972,
         "title": "Raza Proposal",
-        "description": "Harvard-Racliffe Raza Proposal submitted for \"Chicago and Puerto Rican Studies.\""
+        "description": "Harvard-Radcliffe Raza submits a proposal for Chicano and Puerto Rican Studies."
     },
     {
         "year": 1991,
         "title": "Academic Affairs Proposal",
-        "description": "Harvard Foundation's Academic Affairs Committee Submits proposal called or an ethnic studies concentration."
+        "description": "The Harvard Foundation's Academic Affairs Committee submits a proposal calling for an ethnic studies concentration."
     },
     {
         "year": 1993,
         "title": "Education Policy Report",
-        "description": "Educational Policy Committee's produced a proposal that \"survey[ed] FAS curricular offerings and structures in Ethnic studies.\""
+        "description": "The Educational Policy Committee conducts a survey of ethnic studies offerings and produces a report with recommendations."
     },
     {
         "year": 1995,
         "title": "Academic Affairs Report",
-        "description": "The Academic Affairs Committee from Harvard Foundation Submits report called \"Moving Beyond Transcendent Universalisms; Ethnic Studies and a New Era of Pedagogy\""
+        "description": "The Academic Affairs Committee submits another report, this one called \"Moving Beyond Transcendent Universalisms; Ethnic Studies and a New Era of Pedagogy.\""
     },
     {
         "year": 1996,
         "title": "Ad Hoc Committee's Paper",
-        "description": "Ad Hoc committee submits paper calling for the FAS Dean's Committee on Ethnic Studies to coordinate resources, funds, and hiring for ethnic studies."
+        "description": "The Ad Hoc Committee on Ethnic Studies submits a paper calling for greater coordination of resources, funds, and hiring for ethnic studies."
     },
     {
         "year": 2000,
         "title": "Ethnic Studies Proposal",
-        "description": "Committee on Ethnic Studies proposes conferences on \"New American studies.\""
+        "description": "The Committee on Ethnic Studies proposes conferences on \"New American Studies.\""
     },
     {
         "year": 2001,
         "title": "Faculty Petition",
-        "description": "12 Latinx Faculty Petition for Latino/a Center. Committee on Ethnic Studies begins intensive process to explore creating a certificate program for Ethnic Studies."
+        "description": "Faculty push for curricular changes in Latino studies, including one petition for a Latino Studies Center. The Committee on Ethnic Studies begins investigating an Ethnic Studies certificate."
     },
     {
         "year": 2002,
         "title": "Certificate Proposal",
-        "description": "Committee on Latin American and Iberian Studies takes on a proposal for a separate certificate for Latin American Studies to be administered during a 3-year trial period."
+        "description": "The Committee on Latin American and Iberian Studies adopts a proposal for a separate certificate for Latin American Studies."
     },
     {
         "year": 2006,
         "title": "Native Studies Secondary",
-        "description": "Educational policy committee submits proposal for Native Studies secondary."
+        "description": "The Educational Policy Committee submits a proposal for a secondary field in Native American studies."
     },
     {
         "year": 2008,
         "title": "Coalition Paper",
-        "description": "Ethnic studies student coalition submits policy paper in an effort to push the University to revive the Committee for Ethnic Studies."
+        "description": "The Ethnic Studies Coalition, a  student group, submits a policy paper on ethnic studies."
     },
     {
         "year": 2016,
         "title": "Coalition Petition",
-        "description": "Ethnic studies coalition submits petition  that calls for the establishment of an ethnic studies department, a research center, and more faculty retention. The petition includes language that asks Harvard to offer degrees in Native American and Indigenous Studies, LatinX Studies, Asian American Studies, Arab and Muslim American Studies, and Comparative Ethnic Studies."
+        "description": "The Ethnic Studies Coalition submits a petition calling for the establishment of an ethnic studies department, a research center, and more faculty retention. The petition includes language that asks Harvard to offer degrees in Native American and Indigenous Studies, Latinx Studies, Asian American Studies, Arab and Muslim American Studies, and Comparative Ethnic Studies. The petition also calls for a Ph.D. degree in ethnic studies."
     }
 ];
 var timelineIntervals = [[1970, 2000], [2000, 2020]]
