--- a/compiled/sanctions.html
+++ b/compiled/sanctions.html
@@ -12,7 +12,6 @@
         &copy; The Harvard Crimson, 2017
     </body>
 <script>
-
 var data = [
     
     // first datedata
@@ -22,13 +21,13 @@ var data = [
             "date": "May 6, 2016",
             "text": "Harvard announces policy to bar members of single gender social organizations from club leadership positions, varsity captaincies, and endorsements for some fellowships.",
             "nameLines": 2,
-            "textLines": 5,
+            "textLines": 6,
             "image": "http://media.thecrimson.com/widgets/sanctions/img/khurana.png",
             "distance": 2
         },
         {
             "name": "Khurana Announces Implementation Committee",
-            "date": "September 21, 2016",
+            "date": "September 20, 2016",
             "text": "Khurana assembles a committee of students, staff, and faculty to craft recommendations about how to implement and enforce the policy.",
             "nameLines": 3,
             "textLines": 5,
@@ -38,7 +37,7 @@ var data = [
         {
             "name": "Members Appointed to Implementation Committee",
             "date": "November 1, 2016",
-            "text": "Twelve Harvard undergraduates are appointed to the 37-member committee, which also consists of faculty and administrators.",
+            "text": "Twenty Harvard undergraduates are appointed to the 37-member committee, which also consists of faculty and administrators.",
             "nameLines": 3,
             "textLines": 4,
             "image": "http://media.thecrimson.com/widgets/sanctions/img/khurana.png",
@@ -47,7 +46,7 @@ var data = [
         {
             "name": "Committee Recommends Honor Council Help Enforce Penalties",
             "date": "March 6, 2016",
-            "text": "Khurana announces that he is accepting nearly all of the committee's recommendations,including a proposal to have the Honor Council help enforce the College's penalties.",
+            "text": "Khurana announces that he is accepting nearly all of the committee's recommendations, including a proposal to have the Honor Council help enforce the College's penalties.",
             "nameLines": 3,
             "textLines": 7,
             "image": "http://media.thecrimson.com/widgets/sanctions/img/khurana.png",
@@ -69,7 +68,7 @@ var data = [
         {
             "name": "Lewis Criticizes Social Club Policy",
             "date": "May 11, 2016",
-            "text": "In a letter to Khurana, former Dean of the College Harry R. Lewis '68 criticizes the sanctions, arguing that they could create a 'culture of fear and anxiety about noncomformity.'",
+            "text": "In a letter to Khurana, former Dean of the College Harry R. Lewis '68 criticizes the sanctions, arguing that they could create a \"culture of fear and anxiety about noncomformity.\"",
             "nameLines": 2,
             "textLines": 6,
             "image": "http://media.thecrimson.com/widgets/sanctions/img/lewis.png",
@@ -95,7 +94,7 @@ var data = [
         },
         {
             "name": "Khurana Says Sanctions Could Be 'Revised or Replaced'",
-            "date": "January 26, 2017",
+            "date": "January 25, 2017",
             "text": "In an email to Harvard students, Khurana announces the formation of a second committee to reevaluate how to confront the \"problematic impact\" of single-gender social organizations.",
             "nameLines": 3,
             "textLines": 7,
