Compile lobbying and coed

--- a/compiled/coed.html
+++ b/compiled/coed.html
@@ -10,37 +10,37 @@
         </div>
     </body>
 <script>
-var roundtableTitle = 'Meet Harvard\'s Leadership';
+var roundtableTitle = 'Coping with Co-Ed';
 var pulsationSize = 3;
 var data = [
     {
         'name': 'Spee Club',
-        'image': 'http://media.thecrimson.com/widgets/circle.png',
-        'description': 'In September 2015, the Spee Club made waves when it invited both men and women to participate in its punch process—positioning the club to become the first of Harvard’s eight all-male final clubs to go co-ed. The Spee officially went co-ed in November.'
+        'image': 'http://media.thecrimson.com/widgets/coed/spee.png',
+        'description': 'In September 2015, the Spee Club made waves when it invited both men and women to participate in its punch process-positioning the club to become the first of Harvard\'s eight all-male final clubs to go co-ed. The Spee officially went co-ed in November.'
     },
     {
         'name': 'Fox Club',
-        'image': 'http://media.thecrimson.com/widgets/circle.png',
-        'description': 'Undergraduate members of the Fox Club voted to accept a group of women to the club’s in October 2015. The Fox’s graduate board later overturned the decision in August 2016.'
+        'image': 'http://media.thecrimson.com/widgets/coed/fox.png',
+        'description': 'Undergraduate members of the Fox Club voted to accept a group of women to the club\'s in October 2015. The Fox\'s graduate board later overturned the decision in August 2016.'
     },
     {
         'name': 'Seneca',
-        'image': 'http://media.thecrimson.com/widgets/circle.png',
+        'image': 'http://media.thecrimson.com/widgets/coed/seneca.png',
         'description': 'The Seneca announced in August 2016 that the organization would be formally adopting gender neutral membership policies, though membership still remains all-female in practice.'
     },
     {
         'name': 'Oak Club',
-        'image': 'http://media.thecrimson.com/widgets/circle.png',
-        'description': 'The Oak Club adopted gender neutral recruitment practices for the club’s spring recruitment process, coming to the decision in a club-wide consensus among undergraduate and alumni members.'
+        'image': 'http://media.thecrimson.com/widgets/coed/oak.png',
+        'description': 'The Oak Club adopted gender neutral recruitment practices for the club\'s spring recruitment process, coming to the decision in a club-wide consensus among undergraduate and alumni members.'
     },
     {
         'name': 'Sab Club',
-        'image': 'http://media.thecrimson.com/widgets/circle.png',
+        'image': 'http://media.thecrimson.com/widgets/coed/sab.png',
         'description': 'In March, the Sab Club went gender neutral with a new name, logo, and club color. The Sab voted to make the move by a two-thirds majority.'
     },
     {
         'name': 'Alpha Epsilon Pi',
-        'image': 'http://media.thecrimson.com/widgets/circle.png',
+        'image': 'http://media.thecrimson.com/widgets/coed/aepi.png',
         'description': 'Members of the Harvard chapter of national fraternity Alpha Epsilon Pi chose to disaffiliate from the organization and adopt gender neutral membership practices in April.'
     }
 ];
@@ -82,7 +82,7 @@ var detailHeadHeight = 90;
 var mainFont = '"Merriweather", serif';
 
 // strings
-var instructions = 'Click on a person above to see details.';
+var instructions = 'Click on a club above to see details.';
 function dist(x1, y1, x2, y2) {
     var a = x1 - x2;
     var b = y1 - y2;
