Update coed text

--- a/compiled/coed.html
+++ b/compiled/coed.html
@@ -21,12 +21,12 @@ var data = [
     {
         'name': 'Fox Club',
         'image': 'http://media.thecrimson.com/widgets/coed/fox.png',
-        'description': 'Undergraduate members of the Fox Club voted to accept a group of women to the club\'s in October 2015. The Fox\'s graduate board later overturned the decision in August 2016.'
+        'description': 'Undergraduate members of the Fox Club voted to accept a group of women to the club\'s in October 2015. The Fox\'s graduate board later overturned the decision and a recent vote suggests that undergrad support for adding women has cooled.'
     },
     {
         'name': 'Seneca',
         'image': 'http://media.thecrimson.com/widgets/coed/seneca.png',
-        'description': 'The Seneca announced in August 2016 that the organization would be formally adopting gender neutral membership policies, though membership still remains all-female in practice.'
+        'description': 'Over the summer of 2016, the Seneca chose to formally adopt gender neutral membership policies, though its membership still remains all-female in practice.'
     },
     {
         'name': 'Oak Club',
@@ -41,7 +41,7 @@ var data = [
     {
         'name': 'Alpha Epsilon Pi',
         'image': 'http://media.thecrimson.com/widgets/coed/aepi.png',
-        'description': 'Members of the Harvard chapter of national fraternity Alpha Epsilon Pi chose to disaffiliate from the organization and adopt gender neutral membership practices in April.'
+        'description': 'In April, members of the Harvard chapter of national fraternity Alpha Epsilon Pi announced their decision to disaffiliate from the organization and adopt gender neutral membership practices.'
     }
 ];
 // basic colors
